@@ -12,11 +12,12 @@ fi
 
 if test "$PHP_LIBXML" != "no"; then
 
+  dnl This extension can not be build as shared
+  ext_shared=no
+
   PHP_SETUP_LIBXML(LIBXML_SHARED_LIBADD, [
     AC_DEFINE(HAVE_LIBXML,1,[ ])
-    PHP_NEW_EXTENSION(libxml, [libxml.c], 
-                            $ext_shared)
-    PHP_SUBST(LIBXML_SHARED_LIBADD)
+    PHP_NEW_EXTENSION(libxml, [libxml.c], $ext_shared)
   ], [
     AC_MSG_ERROR([xml2-config not found. Please check your libxml2 installation.])
   ])
