@@ -4,6 +4,7 @@ PHP                                                                        NEWS
 - Added new functions:
   . dba_key_split() to split inifile keys in an array. (Marcus)
   . nanosleep() signal safe sleep (Magnus, Ilia)
+- Fixed bug #26072 (--disable-libxml does not work). (Jani)
 - Fixed bug #26083 (Non-working write support in ext/dom). (Ilia)
 - Fixed bug #24394 (Serializing cross-referenced objects causes segfault).
   (Moriyoshi)
